# belay-trace

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js
.belay/agent/: AGENTS.md.snippet
.belay/agent/claude/: SKILL.md
.belay/agent/codex/: SKILL.md
.belay/entries/goals/: GOAL-20260712T163956-001-maintain-intent-to-evidence-alignment-during-age.md
.belay/entries/notes/: NOTE-20260712T134440-001-workflow-feedback-from-first-external-adoption-m.md
.belay/entries/plans/: PLN-20260712T164000-001-deliver-phase-6-assurance-incrementally.md  PLN-20260722T225244-001-add-a-local-trace-provenance-browser.md
.belay/entries/work/: WRK-20260712T165103-001-implement-phase-6-1-agent-first-delivery-assuran.md  WRK-20260712T172930-001-add-updater-for-existing-belay-projects.md  (+2 more)
.belay/evidence/: 2026-07.ndjson
.github/: .typos.toml  CODEOWNERS  CONTRIBUTING.md  GITHUB_SETUP.md  labels.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  task.yml
.github/workflows/: docs-ci.yml  pr-title.yml  rust-ci.yml
docs/: id-reference-standard.md  roadmap.md
docs/design/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
scripts/: update-existing-project.sh
src/: agent.rs  browse.css  browse.js  browse.rs  cli.rs  config.rs  context.rs  coverage.rs  database.rs  entry.rs  error.rs  evidence.rs  export.rs  git_provenance.rs  goal.rs  lib.rs  main.rs  markdown.rs  reconcile.rs  repository.rs  search.rs  store.rs  trace_ids.rs
tests/: browse_http.rs  cli.rs
tests/e2e/: browse.spec.js
